force-app/main/default/objects/Match__c/fields/Away_Goals__c.field-meta.xml
<CustomField>
    <fullName>Away_Goals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Away_Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>