force-app/main/default/objects/Match__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Away_Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Away_Team)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>