force-app/main/default/objects/Match__c/fields/Home_Goal__c.field-meta.xml
<CustomField>
    <fullName>Home_Goal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Home_Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>