force-app/main/default/objects/Match__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home_Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>