force-app/main/default/objects/Match__c/fields/Result_Text__c.field-meta.xml
<CustomField>
    <fullName>Result_Text__c</fullName>
    <formula>Home_Team__r.Name &amp; &apos; &apos; &amp; TEXT(Home_Goal__c) &amp; &apos; - &apos; &amp; Away_Team__r.Name &amp; &apos; &apos; &amp; TEXT(Away_Goals__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result_Text</label>
    <type>Text</type>
</CustomField>